fix gap in some cases

--- a/cell/src/main/resources/jetbrains/jetpad/cell/toDom/style.css
+++ b/cell/src/main/resources/jetbrains/jetpad/cell/toDom/style.css
@@ -42,6 +42,10 @@
   top:0px;
 }
 
+.vertical {
+  font-size: 0px;
+}
+
 .horizontal {
   display: inline-block;
   white-space: nowrap;
